--- a/SeleniumEnero2023/.project
+++ b/SeleniumEnero2023/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SeleniumEnero2023Curso</name>
+	<name>AutomationCurseJanuary2023</name>
 	<comment></comment>
 	<projects>
 	</projects>
